--- a/app/src/free/res/layout/fragment_main.xml
+++ b/app/src/free/res/layout/fragment_main.xml
@@ -2,6 +2,11 @@
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="clickHandler"
+            type="android.view.View.OnClickListener" />
+    </data>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,6 +26,7 @@
             android:id="@+id/jokeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="@{clickHandler}"
             android:layout_below="@+id/instructions_text_view"
             android:text="Click Here" />
 
