--- a/app/src/paid/res/layout/fragment_main.xml
+++ b/app/src/paid/res/layout/fragment_main.xml
@@ -1,7 +1,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
+>
+    <data>
+    <variable
+        name="clickHandler"
+        type="android.view.View.OnClickListener" />
+    </data>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -12,7 +15,7 @@
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <TextView
-            android:id="@+id/instructions_text_view"
+            android:id="@+id/text_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Click Below to Get Jokes" />
@@ -22,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/instructions_text_view"
-            android:onClick="tellJoke"
+            android:onClick="@{clickHandler}"
             android:text="Click Here" />
 
     </LinearLayout>
